[gd_scene load_steps=17 format=3 uid="uid://bjxfp5r5xfw4f"]

[ext_resource type="Script" uid="uid://b2u6pnq3whpdm" path="res://scenes/player/player.gd" id="1_qhqgy"]
[ext_resource type="SpriteFrames" uid="uid://x7nr4ebm7nc4" path="res://scenes/player/player_anims.tres" id="2_qhqgy"]
[ext_resource type="PackedScene" uid="uid://1ar3xmeq1eis" path="res://scenes/player/fishing_rod_verlet.tscn" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://h4wrjgbi7cof" path="res://placeholder/2755--white-exclamation-mark-512.webp" id="4_lvxji"]
[ext_resource type="Script" uid="uid://bhuv78l3b3rx8" path="res://scenes/player/gravity_point.gd" id="4_p47bc"]
[ext_resource type="Script" uid="uid://016fsx1pi425" path="res://ui/fishing_bar.gd" id="6_75vfm"]
[ext_resource type="PackedScene" uid="uid://bow3giawr2rd" path="res://ui/left_click.tscn" id="7_0owmy"]
[ext_resource type="Theme" uid="uid://3ydsxh3h11mw" path="res://ui/tooltip_theme.tres" id="7_qek5x"]
[ext_resource type="Script" uid="uid://c6h46m0d6uex1" path="res://ui/tooltip.gd" id="8_5gtgg"]
[ext_resource type="PackedScene" uid="uid://c3k4tne8tirwg" path="res://ui/fader.tscn" id="10_h17s1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gmlin"]

[sub_resource type="Animation" id="Animation_fm80t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/FishingRod:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(100, -118.571)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/FishingRod:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-4.56578]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="Animation" id="Animation_h17s1"]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/FishingRod:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.0333333, 0),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.7174, 1.7174]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/FishingRod:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(51.4286, -57.1429)]
}

[sub_resource type="Animation" id="Animation_je7p5"]
resource_name = "fish"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"fibf"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/FishingRod:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0318187, 0.0688173, 0.102486),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(90, -115.714), Vector2(68.5714, -150), Vector2(-127.143, -122.857), Vector2(-120, 152.857)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/FishingRod:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0318187, 0.0688173, 0.102486),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [1.94081, 1.71042, 0.567232, -0.860447]
}

[sub_resource type="Animation" id="Animation_gx1jg"]
resource_name = "start_fish"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"start_fish"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/FishingRod:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(90, -115.714)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/FishingRod:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.94081]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_je7p5"]
_data = {
&"RESET": SubResource("Animation_fm80t"),
&"default": SubResource("Animation_h17s1"),
&"fish": SubResource("Animation_je7p5"),
&"start_fish": SubResource("Animation_gx1jg")
}

[node name="Player" type="Node2D"]
script = ExtResource("1_qhqgy")
rotation_speed = 0.3
max_force = 4.0
rope_float_divisor = 40

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-24, -9)
scale = Vector2(0.4, 0.4)
sprite_frames = ExtResource("2_qhqgy")

[node name="Pivot" type="Marker2D" parent="."]
position = Vector2(-34, 13)
scale = Vector2(0.7, 0.7)

[node name="FishingRod" parent="Pivot" instance=ExtResource("4_dqkch")]
position = Vector2(100, -118.571)
rotation = -4.56578
starting_size = 5
max_size = 1000

[node name="Timers" type="Node" parent="."]

[node name="ExtensionTimer" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="ReductionTimer" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="CastTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ForceIncreaser" type="Timer" parent="Timers"]
wait_time = 0.1

[node name="LeavingWaterTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="GravityPoint" type="RigidBody2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource("4_p47bc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityPoint"]
shape = SubResource("CircleShape2D_gmlin")

[node name="Sprite2D" type="Sprite2D" parent="GravityPoint"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_lvxji")

[node name="GravitySpawnPoint" type="Marker2D" parent="."]
position = Vector2(-1108, 6)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="FishingBar" type="VSlider" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 42.0
offset_top = -21.0
offset_right = 58.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
editable = false
scrollable = false
script = ExtResource("6_75vfm")

[node name="Tooltip" type="Control" parent="UI"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("7_qek5x")
script = ExtResource("8_5gtgg")

[node name="LeftClick" parent="UI/Tooltip" instance=ExtResource("7_0owmy")]
layout_mode = 0
offset_left = -518.0
offset_top = -3.0
offset_right = 330.0
offset_bottom = 1024.0

[node name="Label" type="Label" parent="UI/Tooltip"]
layout_mode = 0
offset_left = -417.0
offset_top = 16.0
offset_right = -200.0
offset_bottom = 96.0
text = "Hold to aim
Release to cast!"

[node name="Fader" parent="UI/Tooltip" instance=ExtResource("10_h17s1")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_je7p5")
}

[connection signal="caught_shrimp" from="Pivot/FishingRod" to="." method="_on_fishing_rod_caught_shrimp"]
[connection signal="changed_fishing_status" from="Pivot/FishingRod" to="." method="_on_fishing_rod_changed_fishing_status"]
[connection signal="hooked_shrimp" from="Pivot/FishingRod" to="." method="_on_fishing_rod_hooked_shrimp"]
[connection signal="timeout" from="Timers/ExtensionTimer" to="." method="_on_extension_timer_timeout"]
[connection signal="timeout" from="Timers/ReductionTimer" to="." method="_on_reduction_timer_timeout"]
[connection signal="timeout" from="Timers/CastTimer" to="." method="_on_cast_timer_timeout"]
[connection signal="timeout" from="Timers/ForceIncreaser" to="." method="_on_force_increaser_timeout"]
[connection signal="timeout" from="Timers/LeavingWaterTimer" to="." method="_on_leaving_water_timer_timeout"]
